fix media screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ nav {
     width: fit-content;
     padding: 0 8px 0 8px; 
     list-style-type: none;
-    font-size: 20px;
+    font-size: calc(20px / 3.3vw);
     transition: .2s;
 }
 
@@ -57,12 +57,6 @@ nav {
     display: inline;
 }
 
-/*  content */
-
-/* .paragraft {
-    margin-left: 4%;
-    margin-right: 4%;
-} */
 
 .content {
     margin-top: 10%;
@@ -85,6 +79,7 @@ nav {
     position:relative;
     margin-top: 10%;
     padding-left: 20px;
+    font-size: calc(30px / 3.3vw);
     
 }
 .custom-bottom-text {
@@ -121,6 +116,11 @@ nav {
     background-color: white;
     border-radius: 50%;
 }
+#osu {
+    width: 32px;
+}
+
+
 
 /* Footer */
 
